@@ -24,9 +24,6 @@ import kotlin.coroutines.CoroutineContext;
 import kotlinx.coroutines.AbstractCoroutine;
 import net.bytebuddy.asm.Advice;
 
-import java.lang.reflect.InvocationTargetException;
-
-
 public abstract class CoroutineOnCompletedAdvice {
 
     private CoroutineOnCompletedAdvice() {
@@ -34,11 +31,12 @@ public abstract class CoroutineOnCompletedAdvice {
 
     @Advice.OnMethodEnter(suppress = Throwable.class)
     public static void onEnter(@Advice.This AbstractCoroutine<?> abstractCoroutine)
-        throws NoSuchMethodException, InvocationTargetException, InstantiationException, IllegalAccessException, NoSuchFieldException {
-
-        ContinuationInterceptor continuationInterceptor = (ContinuationInterceptor) abstractCoroutine.getCoroutineContext().get((CoroutineContext.Key) ContinuationInterceptor.Key);
+        throws IllegalAccessException, NoSuchFieldException {
+        ContinuationInterceptor continuationInterceptor = (ContinuationInterceptor) abstractCoroutine.getCoroutineContext()
+            .get((CoroutineContext.Key) ContinuationInterceptor.Key);
         if (continuationInterceptor != null) {
-            AbstractSpan<?> context = (AbstractSpan<?>) continuationInterceptor.getClass().getDeclaredField("span").get(continuationInterceptor);
+            AbstractSpan<?> context = (AbstractSpan<?>) continuationInterceptor.getClass().getDeclaredField("span")
+                .get(continuationInterceptor);
             if (context != null) {
                 context.decrementReferences();
             }
